force-app/main/default/objects/Campaign/fields/msf_Segment__c.field-meta.xml
<CustomField>
    <fullName>msf_Segment__c</fullName>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One to One</fullName>
            </value>
            <value>
                <fullName>Frio individuos</fullName>
            </value>
            <value>
                <fullName>Organizaciones</fullName>
            </value>
            <value>
                <fullName>Celebraciones</fullName>
            </value>
            <value>
                <fullName>Mass donors</fullName>
            </value>
            <value>
                <fullName>Mid donors</fullName>
            </value>
            <value>
                <fullName>Desconocido</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>OCBA All</fullName>
            </value>
            <value>
                <fullName>Asociados</fullName>
            </value>
            <value>
                <fullName>Asociados España</fullName>
            </value>
            <value>
                <fullName>Sanitarios</fullName>
            </value>
            <value>
                <fullName>Terreno</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Testamentarios</fullName>
            </value>
            <value>
                <fullName>Mid+ donors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>