force-app/main/default/objects/Campaign/fields/msf_Thematic__c.field-meta.xml
<CustomField>
    <fullName>msf_Thematic__c</fullName>
    <label>Temática</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>00</fullName>
                <label>00 - Sin temática específica (ej, que es msf, f2f, telemarketing, newsletter….)</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>01 - Sin temática específica (ej, que es msf, f2f, telemarketing, newsletter….)</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>02 - Sin temática específica (ej, que es msf, f2f, telemarketing, newsletter….)</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>03 - Sin temática específica (ej, que es msf, f2f, telemarketing, newsletter….)</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>04 - Sin temática específica (ej, que es msf, f2f, telemarketing, newsletter….)</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>05 - Sin temática específica (ej, que es msf, f2f, telemarketing, newsletter….)</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>06 - Sin temática específica (ej, que es msf, f2f, telemarketing, newsletter….)</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>07 - Sin temática específica (ej, que es msf, f2f, telemarketing, newsletter….)</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>08 - Sin temática específica (ej, que es msf, f2f, telemarketing, newsletter….)</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>09 - Sin temática específica (ej, que es msf, f2f, telemarketing, newsletter….)</label>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 - Sin temática específica (ej, que es msf, f2f, telemarketing, newsletter….)</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11 - Sin temática específica (ej, que es msf, f2f, telemarketing, newsletter….)</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12 - Campaña navidad acquisiton 11/12 Nutrición</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13 - Pastillas contra el dolor ajeno</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14 - Desnutrición Test 2011</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15 - Tuberculosis 2011</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>16 - 40 aniversario</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>17 - Cuerno africa 2011 (Somalia)</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>18 - Regalo solidario - permanente</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>19 - Tienda MSF</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20 - Revista febrero - permanente</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>21 - Revista mayo - permanente</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>22 - Revista memoria - permanente</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>23 - Revista diciembre - permanente</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>24 - Positive generation</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>25 - Malaria 2011</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>26 - Violencia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>