force-app/main/default/objects/Campaign/fields/msf_WebSASId__c.field-meta.xml
<CustomField>
    <fullName>msf_WebSASId__c</fullName>
    <label>IdCampaña WebSAS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>