force-app/main/default/objects/Campaign/fields/msf_Website__c.field-meta.xml
<CustomField>
    <fullName>msf_Website__c</fullName>
    <label>Sito Web</label>
    <type>Url</type>
</CustomField>