force-app/main/default/objects/Campaign/recordTypes/Associative.recordType-meta.xml
<RecordType>
    <fullName>Associative</fullName>
    <active>true</active>
    <label>Asociativo</label>
</RecordType>