force-app/main/default/objects/Campaign/validationRules/MSF_FinalCampaign_Objective.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_FinalCampaign_Objective</fullName>
    <active>true</active>
    <description>msf_Objective__c : Campo obligatorio para campañas finales.</description>
    <errorConditionFormula>IF(msf_FinalCampaign__c = TRUE &amp;&amp; ISBLANK(TEXT(msf_Objective__c)), true, false)</errorConditionFormula>
    <errorDisplayField>msf_Objective__c</errorDisplayField>
    <errorMessage>Campo obligatorio para campañas finales (Objetivo principal)</errorMessage>
</ValidationRule>