force-app/main/default/objects/Campaign/validationRules/MSF_FinalCampaign_OutboundChannel1.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_FinalCampaign_OutboundChannel1</fullName>
    <active>true</active>
    <description>msf_OutboundChannel1__c : Campo obligatorio para campañas finales.</description>
    <errorConditionFormula>IF(msf_FinalCampaign__c = TRUE &amp;&amp; ISBLANK(TEXT(msf_Objective__c)), true, false)</errorConditionFormula>
    <errorDisplayField>msf_OutboundChannel1__c</errorDisplayField>
    <errorMessage>Campo obligatorio para campañas finales (Canal de salida 1)</errorMessage>
</ValidationRule>