force-app/main/default/objects/Campaign/validationRules/MSF_FinalCampaign_OwnBy.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_FinalCampaign_OwnBy</fullName>
    <active>true</active>
    <description>Campo obligatorio para campañas finales.</description>
    <errorConditionFormula>IF(RecordType.DeveloperName != &quot;Associative&quot; &amp;&amp; RecordType.DeveloperName != &quot;Volunteers_Campaign&quot; &amp;&amp; msf_FinalCampaign__c = TRUE &amp;&amp; ISBLANK(TEXT(msf_OwnBy__c)), true, false)</errorConditionFormula>
    <errorDisplayField>msf_OwnBy__c</errorDisplayField>
    <errorMessage>Campo obligatorio para campañas finales.</errorMessage>
</ValidationRule>