force-app/main/default/objects/Campaign/validationRules/MSF_FinalCampaign_Segment.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_FinalCampaign_Segment</fullName>
    <active>true</active>
    <description>msf_Segment__c: Campo obligatorio para campañas finales.</description>
    <errorConditionFormula>IF(msf_FinalCampaign__c = TRUE &amp;&amp; ISBLANK(TEXT(msf_Segment__c)), true, false)</errorConditionFormula>
    <errorDisplayField>msf_Segment__c</errorDisplayField>
    <errorMessage>Campo obligatorio para campañas finales (Segmento)</errorMessage>
</ValidationRule>