force-app/main/default/objects/Campaign/validationRules/MSF_FinalCampaign_Thematic.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_FinalCampaign_Thematic</fullName>
    <active>true</active>
    <description>msf_Thematic__c: Campo obligatorio para campañas finales.</description>
    <errorConditionFormula>IF(msf_FinalCampaign__c = TRUE &amp;&amp; ISBLANK(TEXT(msf_Thematic__c)), true, false)</errorConditionFormula>
    <errorDisplayField>msf_Thematic__c</errorDisplayField>
    <errorMessage>Campo obligatorio para campañas finales (Temática)</errorMessage>
</ValidationRule>