force-app/main/default/objects/Campaign/validationRules/MSF_SolidarityInitiativePromoter.validationRule-meta.xml
<ValidationRule>
    <fullName>MSF_SolidarityInitiativePromoter</fullName>
    <active>false</active>
    <description>Al crear una campaña Iniciativa Solidaria, debe ser obligatorio poner un promotor.</description>
    <errorConditionFormula>ISPICKVAL(msf_OutboundChannel1__c, &apos;Iniciativa Solidaria&apos;) &amp;&amp;   ISBLANK(msf_PromoterIndividual__c)</errorConditionFormula>
    <errorDisplayField>msf_PromoterIndividual__c</errorDisplayField>
    <errorMessage>Al crear una campaña Iniciativa Solidaria, debe ser obligatorio poner un promotor.</errorMessage>
</ValidationRule>