force-app/main/default/objects/Campaign/listViews/AllActiveCampaigns.listView-meta.xml
<ListView>
    <fullName>AllActiveCampaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>msf_CRMExternalId__c</columns>
    <columns>msf_CustomExternalId__c</columns>
    <columns>msf_WebSASId__c</columns>
    <columns>PARENT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las campañas activas</label>
</ListView>