force-app/main/default/objects/Campaign/listViews/Campa_as2.listView-meta.xml
<ListView>
    <fullName>Campa_as2</fullName>
    <columns>msf_CRMExternalId__c</columns>
    <columns>CAMPAIGN.ID</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>msf_IsOnline__c</columns>
    <columns>msf_IsEmergency__c</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>PARENT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>Madrid</value>
    </filters>
    <label>Campañas</label>
    <sharedTo>
        <role>Service_Center</role>
    </sharedTo>
</ListView>